juliana sendo curisosa

--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,17 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Medusa', 'Gato', '5', '8', 'Helena'], ['Mendel', 'Pássaro', '3', '2.5', 'Fernanda'], ['Mendel', 'Réptil', '5', '2', 'Diana'], ['Medusa', 'Pássaro', '3', '15', 'Julia']]\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Dona Florinda', 'Réptil', '1', '2', 'Carlos']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Matilde', 'Peixe', '2', '1', 'Leiticia']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Medusa', 'Réptil', '8', '15', 'Marcela']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Einsten', 'Gato', '1', '2.5', 'Leiticia']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Mendel', 'Pássaro', '1', '2', 'Gabriel']\n",
+      "\u001b[36mTodos animais são: \u001b[0m [['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Dona Florinda', 'Réptil', '1', '2', 'Carlos'], ['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Medusa', 'Réptil', '8', '15', 'Marcela'], ['Einsten', 'Gato', '1', '2.5', 'Leiticia'], ['Mendel', 'Pássaro', '1', '2', 'Gabriel']]\n",
       "_______ Remoção___________\n",
-      "|   Nome Pet        Espécie         Idade        Peso(kg)         Dono      |\n",
-      "[['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Medusa', 'Gato', '5', '8', 'Helena'], ['Mendel', 'Pássaro', '3', '2.5', 'Fernanda'], ['Mendel', 'Réptil', '5', '2', 'Diana']]\n"
+      "\u001b[31m ['Koda', 'Cão', 6, 18, 'Carlos'] \u001b[0m\n",
+      "\u001b[31m ['Dona Florinda', 'Réptil', '1', '2', 'Carlos'] \u001b[0m\n",
+      "\u001b[31m ['Medusa', 'Réptil', '8', '15', 'Marcela'] \u001b[0m\n",
+      "\u001b[31m ['Mendel', 'Pássaro', '1', '2', 'Gabriel'] \u001b[0m\n",
+      "Todos animais são: [['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Einsten', 'Gato', '1', '2.5', 'Leiticia']]\n"
      ]
     }
    ],
@@ -39,7 +47,7 @@
     "espécies = [\"Cachorro\", \"Gato\", \"Pássaro\", \"Réptil\", \"Peixe\"]\n",
     "idades = [\"2\", \"5\", \"1\", \"8\", \"3\"]\n",
     "pesos = [\"2.5\", \"2\", \"1\", \"8\", \"15\"]\n",
-    "nomes_donos = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
+    "nomes_donos = [\"Ana\", \"Savanna\", \"Carlos\", \"Gabriel\", \"Marcela\", \"Leiticia\", \"Juliana\"]\n",
     "\n",
     "animais = [\n",
     "    [\"Koda\", \"Cão\", 6, 18, \"Carlos\"],\n",
@@ -47,36 +55,130 @@
     "]\n",
     "\n",
     "def adicionar_pet ():\n",
-    "    for index in range(0,4):\n",
-    "        nome_pet = nomes_pets [random.randrange(len(nomes_pets))]\n",
+    "    for pet in nomes_pets:\n",
     "        espécie = espécies [random.randrange(len(espécies))]\n",
     "        idade = idades [random.randrange(len(idades))]\n",
     "        peso = pesos [random.randrange(len(pesos))]\n",
     "        nome_dono = nomes_donos [random.randrange(len(nomes_donos))]\n",
-    "\n",
-    "        novo_pet = [nome_pet, espécie, idade, peso, nome_dono]\n",
+    "        \n",
+    "        novo_pet = [pet, espécie, idade, peso, nome_dono]\n",
+    "        print(f'{color_green}O novo animal cadastrado é: \\033[0m {novo_pet}')\n",
     "        animais.append(novo_pet)\n",
-    "\n",
     "\n",
     "adicionar_pet()\n",
     "\n",
-    "print(f'{animais}')\n",
+    "print(f'{color_b}Todos animais são: \\033[0m {animais}')\n",
+    "numero_de_animais = len(animais)\n",
     "print(\"_______ Remoção___________\")\n",
     "\n",
     "def remover_pet ():\n",
-    "    del(animais[-1])\n",
-    "\n",
-    "\n",
+    "   \n",
+    "    for animal in animais:\n",
+    "        print(f'{color_red} {animal} \\033[0m')\n",
+    "        if animal in animais:\n",
+    "            animais.remove(animal)\n",
+    "        else: \n",
+    "            print(\"n tem o nome pet\")\n",
+    "        \n",
     "remover_pet()\n",
+    "print(f'Todos animais são: {animais}')\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Número de animais: 3\n",
+      "_______Atualizar___________\n",
+      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "\u001b[32mO animal atualizado é: \u001b[0m ['Murphy', 'Cachorro', '3', '15', 'Juliana']\n",
+      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Einsten', 'Gato', '1', '2.5', 'Leiticia']\n",
+      "\u001b[32mO animal atualizado é: \u001b[0m ['Einsten', 'Peixe', '8', '2', 'Leiticia']\n",
+      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Einsten', 'Peixe', '8', '2', 'Leiticia']\n",
+      "\u001b[32mO animal atualizado é: \u001b[0m ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']\n",
+      "Todos animais são: [['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Murphy', 'Cachorro', '3', '15', 'Juliana'], ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']]\n",
+      "  Número de animais: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f\"  Número de animais: {numero_de_animais}\")\n",
+    "print(\"_______Atualizar___________\")\n",
     "\n",
-    "message1 = 'Nome Pet'\n",
-    "message2 = 'Espécie'\n",
-    "message3 = 'Idade'\n",
-    "message4 = 'Peso(kg)'\n",
-    "message5 = 'Dono'\n",
+    "def atualizar_animal():\n",
+    "    for animal in animais:\n",
+    "        print(f'{color_y} O animal a ser atualizado será: \\033[0m {animal}')\n",
+    "        if animal in animais:\n",
+    "            nova_especie = espécies [random.randrange(len(espécies))]\n",
+    "            nova_idade = idades [random.randrange(len(idades))]\n",
+    "            novo_peso = pesos [random.randrange(len(pesos))]\n",
+    "            \n",
+    "            pet_atualizado = [animal[0], nova_especie, nova_idade, novo_peso, animal[4]]\n",
+    "            print(f'{color_green}O animal atualizado é: \\033[0m {pet_atualizado}')\n",
+    "            animais.remove(animal)\n",
+    "            animais.append(pet_atualizado)\n",
+    "        else: \n",
+    "            print(f'este animal não está cadastrado')        \n",
+    "atualizar_animal()\n",
     "\n",
-    "print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')  \n",
-    "print(f'{animais}')"
+    "print(f'Todos animais são: {animais}')\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f\"  Número de animais: {numero_de_animais}\")\n",
+    "\n",
+    "# message1 = 'Nome Pet'\n",
+    "# message2 = 'Espécie'\n",
+    "# message3 = 'Idade'\n",
+    "# message4 = 'Peso(kg)'\n",
+    "# message5 = 'Dono'\n",
+    "# print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Número de animais: 3\n",
+      "_______Buscar___________\n",
+      "\u001b[33m A \u001b[0m Leiticia \u001b[33m é dono de: \u001b[0m ['Matilde', 'Peixe', '2', '1', 'Leiticia'] e ['Matilde', 'Peixe', '2', '1', 'Leiticia']\n",
+      "Leiticia é dono de mais de um pet\n",
+      "\u001b[33m A \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Murphy', 'Cachorro', '3', '15', 'Juliana'] e ['Murphy', 'Cachorro', '3', '15', 'Juliana']\n",
+      "Juliana é dono de mais de um pet\n",
+      "\u001b[33m A \u001b[0m Leiticia \u001b[33m é dono de: \u001b[0m ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia'] e ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']\n",
+      "Leiticia é dono de mais de um pet\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f\"  Número de animais: {numero_de_animais}\")\n",
+    "print(\"_______Buscar___________\")\n",
+    "\n",
+    "def buscar_animais_do_dono():\n",
+    "    for animal in animais:\n",
+    "        dono = animal[4]\n",
+    "        if  dono in animal in animais:\n",
+    "            print(f'{color_y} A \\033[0m {dono} {color_y} é dono de: \\033[0m {animal} e {animal}')\n",
+    "            if dono:\n",
+    "                print(f\"{dono} é dono de mais de um pet\")\n",
+    "        else:\n",
+    "            print('Não há castrado desta pessoa')\n",
+    "            \n",
+    "    \n",
+    "buscar_animais_do_dono()"
    ]
   },
   {
@@ -595,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
