Adicionada notas de aulas 0005

--- a/0005.ipynb
+++ b/0005.ipynb
@@ -15,14 +15,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O index do livro Harry Potter e o Cálice de Fogo é 0\n",
+      "O index do livro Harry Potter e a Ordem da Fênix é 1\n",
+      "O index do livro O Hobbit é 2\n",
+      "O index do livro Harry Potter e as Relíquias da Morte é 3\n",
+      "O index do livro O Silmarillion é 4\n",
+      "O index do livro Eclipse é 5\n",
+      "O index do livro Os Filhos de Húrin é 6\n",
+      "O index do livro Amanhecer é 7\n",
+      "O index do livro Contos Inacabados é 8\n",
+      "O index do livro Harry Potter e a Câmara Secreta é 9\n",
+      "O index do livro Harry Potter e a Pedra Filosofal é 10\n",
+      "O index do livro Harry Potter e o Enigma do Príncipe é 11\n",
+      "O index do livro Lua Nova é 12\n",
+      "O index do livro As Duas Torres é 13\n",
+      "O index do livro A Sociedade do Anel é 14\n",
+      "O index do livro O Retorno do Rei é 15\n",
+      "O index do livro Crepúsculo é 16\n",
+      "O index do livro Harry Potter e o Prisioneiro de Azkaban é 17\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import random \n",
+    "livros = [\n",
+    "    \"Harry Potter e a Pedra Filosofal\",\n",
+    "    \"Harry Potter e a Câmara Secreta\",\n",
+    "    \"Harry Potter e o Prisioneiro de Azkaban\",\n",
+    "    \"Harry Potter e o Cálice de Fogo\",\n",
+    "    \"Harry Potter e a Ordem da Fênix\",\n",
+    "    \"Harry Potter e o Enigma do Príncipe\",\n",
+    "    \"Harry Potter e as Relíquias da Morte\",\n",
+    "    \"O Hobbit\",\n",
+    "    \"A Sociedade do Anel\",\n",
+    "    \"As Duas Torres\",\n",
+    "    \"O Retorno do Rei\",\n",
+    "    \"O Silmarillion\",\n",
+    "    \"Contos Inacabados\",\n",
+    "    \"Os Filhos de Húrin\",\n",
+    "    \"Crepúsculo\",\n",
+    "    \"Lua Nova\",\n",
+    "    \"Eclipse\",\n",
+    "    \"Amanhecer\"\n",
+    "]\n",
+    "\n",
+    "# Embaralhando os livros\n",
+    "random.shuffle(livros)\n",
+    "\n",
+    "for index, livro in enumerate(livros):\n",
+    "    print(f\"O index do livro {livro} é {index}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os indíces dos livros de harry potter são\n",
+      "- Harry Potter e o Cálice de Fogo\n",
+      "- Harry Potter e a Ordem da Fênix\n",
+      "- Harry Potter e as Relíquias da Morte\n",
+      "- Harry Potter e a Câmara Secreta\n",
+      "- Harry Potter e a Pedra Filosofal\n",
+      "- Harry Potter e o Enigma do Príncipe\n",
+      "- Harry Potter e o Prisioneiro de Azkaban\n"
+     ]
+    }
+   ],
+   "source": [
+    "hp_livros = []\n",
+    "\n",
+    "for index, livro in enumerate(livros):\n",
+    "    if 'Harry Potter' in livro:\n",
+    "        hp_livros.append(livro)\n",
+    "\n",
+    "print(f\"Os indíces dos livros de harry potter são\")\n",
+    "for livro in hp_livros:\n",
+    "    print(f\"- {livro}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Functions\n",
+    "\n",
+    "livros_com_autor = [\n",
+    "    \"JK Rowling, Harry Potter e a Pedra Filosofal\",\n",
+    "    \"JK Rowling, Harry Potter e a Câmara Secreta\",\n",
+    "    \"JK Rowling, Harry Potter e o Prisioneiro de Azkaban\",\n",
+    "    \"JK Rowling, Harry Potter e o Cálice de Fogo\",\n",
+    "    \"JK Rowling, Harry Potter e a Ordem da Fênix\",\n",
+    "    \"JK Rowling, Harry Potter e o Enigma do Príncipe\",\n",
+    "    \"JK Rowling, Harry Potter e as Relíquias da Morte\",\n",
+    "    \"Tolkien, O Hobbit\",\n",
+    "    \"Tolkien, A Sociedade do Anel\",\n",
+    "    \"Tolkien, As Duas Torres\",\n",
+    "    \"Tolkien, O Retorno do Rei\",\n",
+    "    \"Tolkien, O Silmarillion\",\n",
+    "    \"Tolkien, Contos Inacabados\",\n",
+    "    \"Tolkien, Os Filhos de Húrin\",\n",
+    "    \"Stephanie Meyer ,Crepúsculo\",\n",
+    "    \"Stephanie Meyer ,Lua Nova\",\n",
+    "    \"Stephanie Meyer ,Eclipse\",\n",
+    "    \"Stephanie Meyer ,Amanhecer\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def encontra_livro_autor(nome_do_author, editora):\n",
+    "    livros_encontrados = []\n",
+    "\n",
+    "    for index, livro in enumerate(livros_com_autor):\n",
+    "        autor_do_livro, nome_do_livro = livro.split(',')\n",
+    "        if nome_do_author in autor_do_livro:\n",
+    "            livros_encontrados.append(f\"O livro {nome_do_livro} possui index {index}\")\n",
+    "\n",
+    "    for livro in livros_encontrados:\n",
+    "        print(f\"- {livro}\")\n",
+    "\n",
+    "encontra_livro_autor('JK')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor da linha é [1, 2, 3]\n",
+      "O valor da coluna nesta linha é 2\n",
+      "Novo valor da lista coluna [2]\n",
+      "\n",
+      " ============================== \n",
+      "\n",
+      "O valor da linha é [4, 5, 6]\n",
+      "O valor da coluna nesta linha é 5\n",
+      "Novo valor da lista coluna [2, 5]\n",
+      "\n",
+      " ============================== \n",
+      "\n",
+      "O valor da linha é [7, 8, 9]\n",
+      "O valor da coluna nesta linha é 8\n",
+      "Novo valor da lista coluna [2, 5, 8]\n",
+      "\n",
+      " ============================== \n",
+      "\n",
+      "[2, 5, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Lista de Listas\n",
+    "\n",
+    "matrix = [\n",
+    "    [1,2,3],\n",
+    "    [4,5,6],\n",
+    "    [7,8,9],\n",
+    "]\n",
+    "\n",
+    "# print(lista_de_listas[0][1], lista_de_listas[1][1], lista_de_listas[2][1])\n",
+    "coluna = []\n",
+    "for linha in matrix:\n",
+    "    print(f\"O valor da linha é {linha}\")\n",
+    "    print(f\"O valor da coluna nesta linha é {linha[1]}\")\n",
+    "    coluna.append(linha[1])\n",
+    "\n",
+    "    print(f'Novo valor da lista coluna {coluna}')\n",
+    "    print(\"\\n\",'='*30, \"\\n\")\n",
+    "\n",
+    "print(coluna)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +246,7 @@
     "\n",
     "**Bonus**:\n",
     "\n",
-    "- Responsa à pergunta? Este sistema é capaz de lidar com dois animais com o mesmo, mas de donos de diferetes, e ainda assim conseguir realizar as operações? Justifique sua respostas (Não é necessário escrever código e nem alterar o sistema)"
+    "- Responda à pergunta? Este sistema é capaz de lidar com dois animais com o mesmo, mas de donos de diferetes, e ainda assim conseguir realizar as operações? Justifique sua respostas (Não é necessário escrever código e nem alterar o sistema)"
    ]
   },
   {
@@ -98,8 +276,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
