--- a/leticia/leticia_0003.ipynb
+++ b/leticia/leticia_0003.ipynb
@@ -1,175 +1,94 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Lesson 0003\n",
-    "\n",
-    " - quick recap lesson 0002 challenge\n",
-    " - formatted print padding and colors\n",
-    " - list append and pop elements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Marking printed messages prettier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|      Hello Pythonistas       |\n"
-     ]
-    }
-   ],
-   "source": [
-    "message = ' Hello Pythonistas '\n",
-    "fill = \"\"\n",
-    "align = \"^\" # ['<', '>', '^'] \n",
-    "width = 30\n",
-    "print(f'|{message:{fill}{align}{width}}|')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mestou armando vocês\n"
-     ]
-    }
-   ],
-   "source": [
-    "def print_in_red(message: str) -> None:\n",
-    "    print(f'\\33[31m{message}')\n",
-    "\n",
-    "def print_in_green(message: str) -> None:\n",
-    "    print(f'\\33[32m{message}')\n",
-    "\n",
-    "print_in_green('estou armando vocês')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mia', 'Michael']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alunos = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eve\", \"Frank\", \"Grace\", \"Henry\", \"Isabel\", \"Jack\",\n",
-    "            \"Katie\", \"Liam\", \"Mia\", \"Noah\", \"Olivia\", \"Patrick\", \"Quinn\", \"Rachel\", \"Sam\", \"Tina\",\n",
-    "            \"Ursula\", \"Victor\", \"Wendy\", \"Xander\", \"Yvonne\", \"Zack\", \"Amelia\", \"Ben\", \"Catherine\", \"Daniel\",\n",
-    "            \"Emma\", \"Finn\", \"Gabriella\", \"Hannah\", \"Ian\", \"Jessica\", \"Kevin\", \"Lily\", \"Michael\", \"Nora\"]\n",
+    "#desafio final\n",
+    "import random\n",
     "\n",
-    "alunos_filtrados = []\n",
-    "for aluno in alunos:\n",
-    "    if 'M' in aluno:\n",
-    "        alunos_filtrados.append(aluno)\n",
-    "print(alunos_filtrados)"
+    "livros_harry_potter = [\n",
+    "    \"Harry Potter e a Pedra Filosofal\",\n",
+    "    \"Harry Potter e a Câmara Secreta\",\n",
+    "    \"Harry Potter e o Prisioneiro de Azkaban\",\n",
+    "    \"Harry Potter e o Cálice de Fogo\",\n",
+    "    \"Harry Potter e a Ordem da Fênix\",\n",
+    "    \"Harry Potter e o Enigma do Príncipe\",\n",
+    "    \"Harry Potter e as Relíquias da Morte\"\n",
+    "]\n",
+    "\n",
+    "livros_tolkien = [\n",
+    "    \"O Hobbit\",\n",
+    "    \"A Sociedade do Anel\",\n",
+    "    \"As Duas Torres\",\n",
+    "    \"O Retorno do Rei\",\n",
+    "    \"O Silmarillion\",\n",
+    "    \"Contos Inacabados\",\n",
+    "    \"Os Filhos de Húrin\"\n",
+    "]\n",
+    "\n",
+    "livros_twilight = [\n",
+    "    \"Crepúsculo\",\n",
+    "    \"Lua Nova\",\n",
+    "    \"Eclipse\",\n",
+    "    \"Amanhecer\"\n",
+    "]\n",
+    "\n",
+    "width = 80\n",
+    "color_green = \"\\33[32m\"\n",
+    "color_y= \"\\33[33m\"\n",
+    "color_red= \"\\33[31m\"\n",
+    "color_b= \"\\33[36m\"\n",
+    "style = \"\\33[1m\"\n",
+    "background = \"\\33[47m\"\n",
+    "\n",
+    "pessoas = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
+    "saldo = []\n",
+    "catalogo = livros_harry_potter + livros_tolkien + livros_twilight\n",
+    "livros = []\n",
+    "livros_alugados = []\n",
+    "livros_disponiveis = []\n",
+    "numero_livros_disp = []\n",
+    "def sortear_livro(catalogo: list[str]) -> str:\n",
+    "    return random.choice(catalogo)\n",
+    "\n",
+    "def alugar_livros():\n",
+    "\n",
+    "    for livro in catalogo:\n",
+    "        livros_disponiveis.append(livro)\n",
+    "\n",
+    "    for index in pessoas:\n",
+    "        livro_escolhido = catalogo [random.randrange(len(catalogo))]\n",
+    "        if livro_escolhido in livros_alugados:\n",
+    "            print(f\"Desculpe, o livro não está disponível\")\n",
+    "        else:\n",
+    "            livros_alugados.append(livro_escolhido)\n",
+    "            livros_disponiveis.remove(livro_escolhido)\n",
+    "        print(f\"o livro escolhido é: {livro_escolhido}\")\n",
+    "        print(f\" {color_green}{style} Lista de disponíveis é: \\033[0m {livros_disponiveis}\")\n",
+    "        print(f\" {color_red}{style} Lista alugados é: \\033[0m {livros_alugados}\")\n",
+    "        \n",
+    "    for livro in livros_alugados:\n",
+    "        livros_disponiveis.append(livro)\n",
+    "        saldo = saldo + 10\n",
+    " numero_livro_disp-len(livros_disponiveis)\n",
+    "\n",
+    "    print(f\"O Saldo atual é: {saldo}\")\n",
+    "\n",
+    "\n",
+    "alugar_livros()\n",
+    "\n",
+    "print(catalogo)\n",
+    "print(f\" {color_green}{style} Lista de disponíveis é: \\033[0m {livros_disponiveis}\")\n",
+    "print(f\"Saldo final da biblioteca é de R$ {saldo:.2f}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### NEW Challenge \n",
-    "\n",
-    "NOTE: this is the same challenge from lesson 0003 with some minor add-ons\n",
-    "\n",
-    "As a teacher, you are responsible for 40 students. The students have just taken a test and now you have their 40 grades \n",
-    "You want to display a table with the students **name**, **grade** and **status**, where status indicates if the students has passed the test or not.\n",
-    "\n",
-    "Use the knowledge of for loops, formatted print and if statements to build this table that will be displayed in the python notebook output\n",
-    "\n",
-    "Follow this requirements from lesson 0002:\n",
-    " - the table must have a header with the three column\n",
-    " - each row corresponds to a student\n",
-    " - grades are float number from 0 to 10, with one decimal precision\n",
-    " - the test passing grade is 5\n",
-    " - the `students` and `grades` are already sorted such as *the **students[i]** has **grades[i]***\n",
-    " - add a final row with the entire class **average grade**\n",
-    " \n",
-    "New lesson 0003 requirements  \n",
-    " - adjust column padding so all column are printed with the same width\n",
-    " - if a student has passed, it should be show in table **PASSED** in green\n",
-    " - if a student has NOT passed, it should be show in table **FAILED** in red\n",
-    " - print the list if names of students that have NOT passed at the end, so we can send a letter for their parents :evil: \n",
-    "\n",
-    "#### Formatted print padding tip\n",
-    " - `i:<10` => justify text to the left within 10 characters width\n",
-    " - `i:>10` => justify text to the right within 10 characters width\n",
-    " - `i:^10` => justify text to the center within 10 characters width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1089611551.py, line 34)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[78], line 34\u001b[0;36m\u001b[0m\n\u001b[0;31m    if 'status' in aluno:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "alunos = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eve\", \"Frank\", \"Grace\", \"Henry\", \"Isabel\", \"Jack\",\n",
-    "            \"Katie\", \"Liam\", \"Mia\", \"Noah\", \"Olivia\", \"Patrick\", \"Quinn\", \"Rachel\", \"Sam\", \"Tina\",\n",
-    "            \"Ursula\", \"Victor\", \"Wendy\", \"Xander\", \"Yvonne\", \"Zack\", \"Amelia\", \"Ben\", \"Catherine\", \"Daniel\",\n",
-    "            \"Emma\", \"Finn\", \"Gabriella\", \"Hannah\", \"Ian\", \"Jessica\", \"Kevin\", \"Lily\", \"Michael\"]\n",
-    "grades = [round(random.uniform(0, 10), 1) for _ in range(40)]\n",
-    "\n",
-    "def print_in_red(message: str) -> None:\n",
-    "    print(f'\\33[31m{message}')\n",
-    "\n",
-    "def print_in_green(message: str) -> None:\n",
-    "    print(f'\\33[32m{message}')\n",
-    "\n",
-    "print_in_green('aprovados')\n",
-    "print_in_red('reprovados')\n",
-    "\n",
-    "message_1 = 'alunos'\n",
-    "mes_ = 'grades'\n",
-    "mess_ = 'status'\n",
-    "\n",
-    "fill = \"\"\n",
-    "align = \"^\" \n",
-    "width = 40\n",
-    "print(f'|{message_1:{fill}{align}{width}}{mes_:{fill}{align}{width}}{mess_:{fill}{align}{width}}|')\n",
-    "alunos_filtrados = []\n",
-    " \n",
-    "for alunos in notas(0,40):\n",
-    "    notas = alunos[index]\n",
-    "    media = (soma + notas)/6 \n",
-    "        \n",
-    "    if grades[index] >= 6:\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
